[package]
name = "snip-20-vesting"
version = "1.0.0"
authors = ["{{authors}}"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "./src/lib.rs"

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces


[dependencies]
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret-toolkit = "0.2.0" # Uncomment this for extra tools
schemars = "0.7"
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
bincode2 = "2.0.1"
thiserror = "1.0.31"
hex = "0.4"
sha2 = { version = "0.9.9", default-features = false }

[dev-dependencies]
cosmwasm-schema = "0.10.1"
